--- a/job3.html
+++ b/job3.html
@@ -8,7 +8,7 @@
 <body bgcolor="#FFFFFF">
 
 <!-- 背景音乐：自动播放 + 循环 + 可手动控制 -->
-<audio src="c:\Users\李恩泽\Downloads\《弦上褪色的永恒之约》JOY⭐️菠萝冰沙-悲伤.m4a"
+<audio src="《弦上褪色的永恒之约》JOY⭐️菠萝冰沙-悲伤.m4a"
        autoplay="autoplay"
        controls="controls"
        loop="loop">
@@ -126,7 +126,7 @@
 
 <!-- 图片超链接（点击图片跳转到另一个页面） -->
 <a href="club.html" target="_blank">
-    <img src="c:\Users\李恩泽\Downloads\文心一言AI作图_20251105224626.png"
+    <img src="文心一言AI作图_20251105224626.png"
          alt="吉他社往届音乐会照片"
          width="320"
          height="220"
@@ -146,7 +146,7 @@
 </p>
 
 <!-- 多媒体嵌入（示例视频） -->
-<embed src="c:\Users\李恩泽\Videos\11月5日.mp4"
+<embed src="11月5日.mp4"
        width="480"
        height="270"
        loop="true">
