--- a/job3.html
+++ b/job3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>校园吉他社 2025 年招新网页示例（含背景音乐）</title>
+    <title>钢琴社 2025 年招新网页示例（含背景音乐）</title>
 </head>
 
 <body bgcolor="#FFFFFF">
@@ -141,7 +141,7 @@
 <h3>宣传视频示例</h3>
 
 <p>
-    下面示例演示如何在页面中嵌入一段吉他社宣传视频。
+    下面示例演示如何在页面中嵌入一段钢琴社宣传视频。
     
 </p>
 
