--- a/club.html
+++ b/club.html
@@ -31,7 +31,7 @@
 
 <p>
     <!-- 这里的文件名改成你主页面的实际文件名，比如 club_example.html 或 club.html -->
-    <a href="club.html">返回吉他社招新网页</a>
+    <a href="job3.html">返回钢琴社招新网页</a>
 </p>
 
 </body>
